unpackaged/objects/OrderItem.object
<CustomObject>
  <fields>
    <fullName>AXDiscount__c</fullName>
    <formula>1 - ( UnitPrice / AXRetailPrice__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AX Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>AXRetailPrice__c</fullName>
    <label>Retail Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Account_for_Sample_in_AX__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account for Sample in AX</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Account.OneAccount_Type__c</field>
        <operation>equals</operation>
        <value>DENTSPLY</value>
      </filterItems>
      <filterItems>
        <field>Account.Sub_Account_Type__c</field>
        <operation>equals</operation>
        <value>Sales Rep</value>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Amount_Discounted__c</fullName>
    <formula>Unit_price_formula_c__c * Discount_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Discounted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Article_Number__c</fullName>
    <formula>PricebookEntry.Product2.Article__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Article Number</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Brand__c</fullName>
    <formula>PricebookEntry.Product2.Brand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>DiscountApproval_Line_Item__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Discount Approval Line Item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Discount_Approval_Eval__c</fullName>
    <formula>IF( AND(Discount_Percent__c  &gt; 0, (LEN( Text(Sales_Special__c))&gt;0)),"NO APPROVAL NEEDED", 

IF(AND(Discount_Percent__c  &gt; 0,(LEN( Text(Sales_Special__c))=0)), "YES - APPROVAL NEEDED",

IF(Discount_Percent__c  &gt; 0, "YES - APPROVAL NEEDED",
IF(Discount_Percent__c   = 0, "NO APPROVAL NEEDED",

"YES"))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Approval Evaluation</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Discount_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Discount</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>DiscountedAmount__c</fullName>
    <formula>If(ISNULL(Discount_Percent__c), 0 ,  Quantity * UnitPrice * Discount_Percent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Distr__c</fullName>
    <label>Distributor price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>ERP_Account_for_Sample__c</fullName>
    <formula>if( isblank(Account_for_Sample_in_AX__c),"",Account_for_Sample_in_AX__r.Movex__c &amp;" - " &amp;  Account_for_Sample_in_AX__r.Name )</formula>
    <label>ERP Account for Sample</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Free_Of_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Of Charge</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Free_of_Charge_Delivery__c</fullName>
    <description>Used to state who should deliver a free of charge item - it can be either a dealer, Dentsply Sirona Customer Service or given directly during meeting by Sales Rep</description>
    <label>Free of Charge Delivery</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Dealer</fullName>
        </value>
        <value>
          <fullName>Customer Service</fullName>
        </value>
        <value>
          <fullName>Sales Rep</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Item_at_100__c</fullName>
    <formula>IF( Discount_Percent__c  &gt; 0.99,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item at 100%?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>MTF_EvaluationNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MTF Evaluation Line Item</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>MTF_Evaluation__c</fullName>
    <formula>CASE( PricebookEntry.Product2.Article__c ,
"US228005", 1,
"US228010", 1,
"US228025", 1,
"US420038",1,
"US420039",1,
"US420075", 1,
"US420076",1,
"US420077", 1,
"US420078",1,
"US400175",1,
"US400173", 1,
"US400174",1,
"US400191",1,
"US400192",1,
"US400175", 1,
"US400176",1,
"US400177",1,
"US400178",1,
"US791101", 1,
"US791102", 1,
"US791104", 1,
"US791204", 1,
"US790101", 1,
"US790102", 1,
"US790104", 1,
"US790202", 1,
"US790204", 1,
"US400193", 1,
"US420048", 1,
"US400172", 1,
"US400178", 1,
"US400194", 1,
"US420049", 1,

"US600172", 1,
"US600173", 1,
"US600174", 1,
"US600175", 1,
"US600176", 1,
"US600177", 1,
"US600178", 1,
"US600191", 1,
"US600192", 1,
"US600193", 1,
"US600194", 1,
"US620038", 1,
"US620039", 1,
"US620048", 1,
"US620049", 1,
"US620075", 1,
"US620076", 1,
"US620077", 1,
"US620078", 1,


0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MTF Evaluation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>No_Contract__c</fullName>
    <formula>PricebookEntry.No_Contract__c</formula>
    <label>No Contract</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Non_SIMPLANT_Evaluation__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Populated by a workflow update, this enables the order to evaluate how many Simplant/Non Simplant Line items are on this order for Approval Process Purposes</inlineHelpText>
    <label>Non-SIMPLANT Evaluation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Number_of_Items_at_100_Discount__c</fullName>
    <label>Number of Items at 100% Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Offer_Code_Applied_Number__c</fullName>
    <description>Updated by the Order Product Process Builder and used in the Roll Up Summary field on the Order</description>
    <label>Offer Code Applied Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Offer_Code_Name__c</fullName>
    <description>Prints the name of the offer code, if one is applied</description>
    <formula>Offer_Code_dna__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Code Name</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Offer_Code_dna__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer Code</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Offer_Code__c.Offer_Code_Status__c</field>
        <operation>notEqual</operation>
        <value>Expired</value>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Offer_Code__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Product_Group__c</fullName>
    <description>Taken from Product Group Level 4 on the Product Object</description>
    <formula>PricebookEntry.Product2.PG4_Desc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_Line__c</fullName>
    <formula>PricebookEntry.Product2.Product_Line__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_Type__c</fullName>
    <formula>PricebookEntry.Product2.PG2_Desc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Retail_Price__c</fullName>
    <formula>PricebookEntry.Retail_Price__c</formula>
    <label>Retail Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Reward__c</fullName>
    <description>Used for tracking rewards in UK</description>
    <label>Reward (UK)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>SBU__c</fullName>
    <formula>if( isblank(PricebookEntry.Product2.GlobalSKUMapping__r.SBU_Name__c), 
PricebookEntry.Product2.D_Level2__c &amp; '-' &amp; PricebookEntry.Product2.D_Level1__c,PricebookEntry.Product2.GlobalSKUMapping__r.SBU_Name__c)</formula>
    <label>SBU</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SIMPLANT_Line_Item__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Populated by a workflow rule which evaluates the formula field SIMPLANT Order and brings back a numerical value. This field will be used in a rollup summary to the Order for evaluation in an approval process for North America</description>
    <inlineHelpText>Populated by a workflow rule which evaluates the formula field SIMPLANT Order and brings back a numerical value. This field will be used in a rollup summary to the Order for evaluation in an approval process for North America</inlineHelpText>
    <label>SIMPLANT Line Item</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SIMPLANT_Software_Evaluation__c</fullName>
    <formula>CASE(PricebookEntry.Product2.PG4_Code__c,
"ID8111",1,
"ID8201",1,
"ID8202",1,
"ID8203",1,
"ID8205",1,
"ID8206",1,
"ID8207",1,
"ID8211",1,
"ID8212",1,
"ID8213",1,
"ID8215",1,
"ID8216",1,
"ID8217",1,
"ID8222",1,
"ID8231",1,
"ID8232",1,
"ID8241",1,
"ID8251",1,
"ID8252",1,
"ID8255",1,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIMPLANT Software Evaluation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SIMPLANT_Software_Line_Item__c</fullName>
    <label>SIMPLANT Software Line Item</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_Special__c</fullName>
    <label>Sales Special</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>***DENTSPLY Implants Specials***</fullName>
        </value>
        <value>
          <fullName>2018XIVE15 - Xive 15 Implant Special $5,995UDS/$6,495CAD(expires 6/30/18)</fullName>
        </value>
        <value>
          <fullName>2018XIVE10 - Xive 10 Implant Special $5,350UDS/$5,995CAD(expires 6/30/18)</fullName>
        </value>
        <value>
          <fullName>***National Specials***</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Simplant_Software_Flag__c</fullName>
    <formula>IF(SIMPLANT_Software_Line_Item__c &gt; 0,  IMAGE("/resource/1431363452000/NA_SimplantSftw", "SIMPLANT SOFTWARE",34,60),"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Simplant Software Flag</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Total_Line_Item_Price__c</fullName>
    <formula>Quantity * UnitPrice *(1- Discount_Percent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Line Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Unit_price_formula_c__c</fullName>
    <formula>UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Value_of_Samples_for_Sales_Rep__c</fullName>
    <label>Value of Samples for Sales Rep</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Value_of_free_product__c</fullName>
    <label>Value of free product</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <validationRules>
    <fullName>Can_Not_Pick_Header_Specials</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Text(Sales_Special__c)= "***DENTSPLY Implants Specials***",
Text(Sales_Special__c) ="***National Specials***")</errorConditionFormula>
    <errorDisplayField>Sales_Special__c</errorDisplayField>
    <errorMessage>Please pick a valid sales special from the list (not the header row!)</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>Check_if_discount_100</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND(Discount_Percent__c =1.00, ISPICKVAL(Free_of_Charge_Delivery__c, ""), OR(Order.RecordTypeId ="0120J000000cn2w", Order.RecordTypeId ="0120J000000cn31")), true, false)</errorConditionFormula>
    <errorDisplayField>Free_of_Charge_Delivery__c</errorDisplayField>
    <errorMessage>You must choose a type of delivery for products that are free of charge</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>Check_if_foc_notblank</fullName>
    <active>false</active>
    <errorConditionFormula>AND(or(isblank(Discount_Percent__c), Discount_Percent__c&lt;1), Isblank(text(Free_of_Charge_Delivery__c))=False, OR(Order.RecordTypeId ="0120J000000cn2w", Order.RecordTypeId ="0120J000000cn31"))</errorConditionFormula>
    <errorDisplayField>Discount_Percent__c</errorDisplayField>
    <errorMessage>You must insert 100% discount if the products are free of charge</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>OM_Max_Discount</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Discount_Percent__c &gt; 1, Discount_Percent__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Discount_Percent__c</errorDisplayField>
    <errorMessage>Discount Percent must be between 0 and 100%</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>User_May_Not_Change_the_Unit_Price</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISCHANGED(UnitPrice),
$User.ProfileId &lt;&gt; "00e20000001Ygwu", /*#System: System Administrator*/
$User.ProfileId &lt;&gt; "00e0J000001cy8i", /*#System: System Administrator (CPQ)*/
$User.ProfileId &lt;&gt; "00e20000000kVxk",  /*System Administrator*/
$User.ProfileId &lt;&gt;  "00e0J000001Ar8G",  /*#System: Integration User*/
$User.ProfileId &lt;&gt;  "00e6M000001Yjg8" /*#System: All Integration Users*/)</errorConditionFormula>
    <errorDisplayField>UnitPrice</errorDisplayField>
    <errorMessage>You are not allowed to change the Unit Price, since it is controlled via the price list in Salesforce.com. To change the price, please add a discount instead.</errorMessage>
  </validationRules>
</CustomObject>